--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     ],
     "paths": {
       // TS5090 leading './'
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     }
   },
   "include": ["./src", "./types", "./config"],
