feat(rn): 集成React Native支持并配置应用名称
- 将应用名称从taroDemo更改为JobMock
- 添加React Native相关配置，包括sourcemap输出路径配置
- 新增metro.config.js配置文件以支持Metro打包工具
- 添加index.js入口文件
- 安装@react-native/metro-config、@tarojs/components-rn、
  @tarojs/rn-runner、@tarojs/rn-supporter等相关依赖包
- 升级react和react-dom版本至18.2.0
- 添加expo和react-native依赖包以支持原生功能

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
+    "@react-native/metro-config": "^0.73.5",
     "@tarojs/components": "4.0.7",
+    "@tarojs/components-rn": "^4.1.10",
     "@tarojs/helper": "4.0.7",
     "@tarojs/plugin-framework-react": "4.0.7",
     "@tarojs/plugin-platform-alipay": "4.0.7",
@@ -82,25 +84,31 @@
     "@tarojs/plugin-platform-tt": "4.0.7",
     "@tarojs/plugin-platform-weapp": "4.0.7",
     "@tarojs/react": "4.0.7",
+    "@tarojs/rn-runner": "^4.1.10",
+    "@tarojs/rn-supporter": "^4.1.10",
     "@tarojs/runtime": "4.0.7",
+    "@tarojs/runtime-rn": "^4.1.10",
     "@tarojs/shared": "4.0.7",
     "@tarojs/taro": "4.0.7",
+    "@tarojs/taro-rn": "^4.1.10",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.6.0",
+    "expo": "~50.0.21",
     "input-otp": "1.4.2",
     "lucide-react": "0.487.0",
     "motion": "12.23.24",
     "next-themes": "0.4.6",
     "pnpm": "^10.28.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "7.55.0",
+    "react-native": "^0.73.11",
     "react-popper": "2.3.0",
     "react-resizable-panels": "2.1.7",
     "react-responsive-masonry": "2.7.1",
